--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.3",
+    "mysql2": "^3.11.3",
     "next": "15.0.2",
+    "prisma": "^5.21.1",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
